[project]
name = "monte"
version = "0.1.0"
description = "Monte: A Python package for tumor purity estimation and beta value adjustment using DNA methylation data."
readme = "README.md"
authors = [
    { name = "weihaolee", email = "steve24563@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
    "torch>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
